# matrix_rain

./: .gitignore  LICENSE.md  README.md  pyproject.toml
matrix_rain/: main.py
